third_party/move/move-compiler-v2/tests/checking/inlining/break_continue_in_lambda.exp

Diagnostics:
warning: Unnecessary trailing semicolon
  ┌─ tests/checking/inlining/break_continue_in_lambda.move:3:14
  │
3 │         break;
  │         -----^
  │         │    │
  │         │    A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
  │         Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:12:18
   │
12 │             break;
   │             -----^
   │             │    │
   │             │    A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   │             Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:18:21
   │
18 │             continue;
   │             --------^
   │             │       │
   │             │       A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   │             Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:49:7
   │
49 │     break;
   │     -----^
   │     │    │
   │     │    A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   │     Any code after this expression will not be reached

warning: Unnecessary trailing semicolon
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:53:10
   │
53 │     continue;
   │     --------^
   │     │       │
   │     │       A trailing `;` in an expression block implicitly adds a `()` value expression after the semicolon, not needed here.
   │     Any code after this expression will not be reached


Diagnostics:
error: Break outside of a loop not currently supported in inline functions
  ┌─ tests/checking/inlining/break_continue_in_lambda.move:3:9
  │
3 │         break;
  │         ^^^^^

error: Break outside of a loop not supported in function-typed arguments (lambda expressions)
   ┌─ tests/checking/inlining/break_continue_in_lambda.move:40:26
   │
40 │                 brk2(| | break);
   │                          ^^^^^
